<resources>
    <string name="app_name">@string/global_app_name</string>
    <string name="device_admin_label">@string/app_name</string>
    <string name="device_admin_desc">Allows locking your phone from your watch</string>
    <string name="device_admin_perm_grant_dialog_title">Missing Permission</string>
    <string name="device_admin_perm_grant_dialog_message">Wearable Extensions requires device administrator permissions to be able to lock your phone. WARNING: You will not be able to uninstall Wearable Extensions until you revoke Device Administrator permissions from your device settings.</string>
    <string name="main_battery_sync_title">Battery Sync</string>
    <string name="main_battery_sync_summary">Sync device battery percentages between each other</string>
    <string name="pref_battery_sync_enable_title">Enable Battery Sync</string>
    <string name="pref_battery_sync_interval_title">Sync Interval</string>
    <string name="pref_battery_sync_interval_summary">Sync interval in minutes</string>
    <string name="pref_battery_sync_phone_charged_noti_title">Phone Charged Notification</string>
    <string name="pref_battery_sync_phone_charged_noti_summary">Get a notification on your watch when your phone is %s%% charged</string>
    <string name="pref_battery_sync_watch_charged_noti_title">Watch Charged Notification</string>
    <string name="pref_battery_sync_watch_charged_noti_summary">Get a notification on your phone when your watch is %s%% charged</string>
    <string name="pref_battery_sync_charge_threshold_title">Battery Charge Threshold</string>
    <string name="pref_battery_sync_charge_threshold_summary">Adjust the minimum charge percent to consider your device charged</string>
    <string name="battery_sync_watch_charged_noti_channel_disabled">Watch charged notifications were disabled in notification settings</string>
    <string name="battery_sync_disabled">Battery Sync disabled</string>
    <string name="battery_sync_last_updated_under_minute">Last updated less than a minute ago</string>
    <string name="battery_sync_percent_short">%s%%</string>
    <string name="battery_sync_enable_failed">Failed to enable battery Sync</string>
    <string name="battery_sync_error">Error</string>
    <string name="battery_sync_loading">Please Wait</string>
    <string name="main_interrupt_filter_sync_title">Do not Disturb Sync</string>
    <string name="main_interrupt_filter_sync_summary">Sync Do not Disturb state between your devices</string>
    <string name="pref_interrupt_filter_sync_to_watch_title">Phone to Watch Sync</string>
    <string name="pref_interrupt_filter_sync_to_watch_summary">EXPERIMENTAL Turn on DnD on your watch when your phone is set to silent or vibrate</string>
    <string name="pref_interrupt_filter_sync_to_phone_title">Watch to Phone Sync</string>
    <string name="pref_interrupt_filter_sync_to_phone_summary">Sync DnD state to your phone from your watch</string>
    <string name="pref_interrupt_filter_sync_with_theater_title">Sync with watch Theater mode</string>
    <string name="pref_interrupt_filter_sync_with_theater_summary">Sync DnD state with Wear OS theater mode</string>
    <string name="interrupt_filter_sync_request_policy_access_message">Please grant Wearable Extensions permission to change Do Not Disturb state</string>
    <string name="interrupt_filter_sync_helper_loading_text">Please wait…</string>
    <string name="interrupt_filter_sync_helper_all_set_title">All Set!</string>
    <string name="interrupt_filter_sync_helper_all_set_message">Tap \'Finish\' below to enable Phone to Watch Sync</string>
    <string name="interrupt_filter_sync_helper_error_title">Error</string>
    <string name="interrupt_filter_sync_helper_error_watch_version">Your watch is running an incompatible Android OS (System version newer than 8.0)\nThe required permission cannot be granted on watches running system versions newer than 8.0</string>
    <string name="interrupt_filter_sync_helper_error_watch_null">No connected watches found running Wearable Extensions</string>
    <string name="interrupt_filter_sync_helper_setup_title">Setup</string>
    <string name="interrupt_filter_sync_helper_button_finish">Finish</string>
    <string name="interrupt_filter_sync_helper_button_next">Next</string>
    <string name="interrupt_filter_sync_helper_permission_not_granted">Permission not granted, please try again.</string>
    <string name="main_app_manager_title">App Manager</string>
    <string name="main_app_manager_summary">Manage apps installed on your watch</string>
    <string name="app_info_version_prefix">Version %s</string>
    <string name="app_info_first_installed_prefix">First installed: %s</string>
    <string name="app_info_last_updated_prefix">Last updated: %s</string>
    <string name="app_info_open_button">Open</string>
    <string name="app_info_uninstall_button">Uninstall</string>
    <string name="app_info_requested_permissions_title">Requested Permissions</string>
    <string name="app_info_requested_permissions_none">No permissions requested</string>
    <string name="app_info_requested_permissions_dialog_title">@string/app_info_requested_permissions_title</string>
    <string name="app_manager_uninstalled_prefix">Uninstalled %s</string>
    <string name="app_manager_installed_prefix">Installed %s</string>
    <string name="app_manager_continue_on_watch">Continue on your watch</string>
    <string name="app_manager_unable_to_connect">Unable to connect to watch</string>
    <string name="app_manager_section_user_apps">User Apps</string>
    <string name="app_manager_section_system_apps">System Apps</string>
    <string name="app_manager_activity_title">@string/main_app_manager_title</string>
    <string name="app_manager_activity_subtitle">Showing apps on %s</string>
    <string name="main_phone_locking_title">Phone Locking</string>
    <string name="main_phone_locking_summary">Lock your phone from your watch</string>
    <string name="pref_phone_locking_mode_title">Phone Locking Method</string>
    <string name="pref_phone_locking_mode_no_option_summary">Android versions below 9.0 can only use Device Administrator mode</string>
    <string name="pref_phone_locking_accessibility_settings_title">Open Accessibility Settings</string>
    <string name="pref_phone_locking_admin_settings_title">Open Device Admin Settings</string>
    <string name="pref_lock_phone_enabled_title">Remote phone locking</string>
    <string name="pref_lock_phone_enabled_desc">Allow locking your phone from your wearable</string>
    <string name="phone_locking_accessibility_service_label">Phone Locking</string>
    <string name="phone_locking_mode_admin">Device Administrator</string>
    <string name="phone_locking_mode_accessibility">Accessibility Service</string>
    <string name="phone_locking_disabled_by_mode_change">Phone Locking has been automatically disabled, re-enable it to start using your new Phone Locking method</string>
    <string name="dialog_phone_locking_accessibility_service_title">Enable Accessibility Service</string>
    <string name="dialog_phone_locking_accessibility_service_desc">You\'ve chosen to use the Accessibility Service as your phone locking method. To enable this, you need to enable "Phone Locking" as an accessibility service in your phone settings. Tap "enable" below to go there now.</string>
    <string name="pref_noti_status_title">Notification Settings</string>
    <string name="pref_noti_status_summary_enabled">Notifications are enabled</string>
    <string name="pref_noti_status_summary_disabled">Notifications are disabled</string>
    <string name="pref_daynight_title">App Theme</string>
    <string name="pref_daynight_option_light">Light</string>
    <string name="pref_daynight_option_dark">Dark</string>
    <string name="pref_daynight_option_battery">Set by Battery Saver</string>
    <string name="pref_daynight_option_system">Follow System</string>
    <string name="pref_category_watch_connection">Watch Connection</string>
    <string name="pref_manage_watches_title">Manage Watches</string>
    <string name="pref_auto_add_watches_title">Auto-add new watches</string>
    <string name="pref_auto_add_watches_summary">Automatically add new watches to Wearable Extensions if they already have the app installed</string>
    <string name="widget_watch_battery_title">Watch Battery</string>
    <string name="widget_watch_battery_config_title">Watch Battery Widget Setup</string>
    <string name="pref_category_widget_customisation">Widget Customisation</string>
    <string name="pref_show_widget_background_title">Show Background</string>
    <string name="pref_widget_background_opacity_title">Background Opacity</string>
    <string name="pref_category_about_versions">Versions</string>
    <string name="pref_about_priv_policy_title">Privacy Policy</string>
    <string name="pref_about_share_title">Share Wearable Extensions</string>
    <string name="pref_about_review_title">Rate &amp; Review</string>
    <string name="pref_about_donate_title">Donate</string>
    <string name="pref_about_changelog_title">Changelog</string>
    <string name="pref_about_phone_version_title">Phone Version: %s</string>
    <string name="pref_about_watch_version_title">Watch Version: %s</string>
    <string name="pref_about_watch_version_loading">Watch Version Loading</string>
    <string name="pref_about_watch_version_failed">Failed to get Watch Version</string>
    <string name="pref_about_watch_version_disconnected">Watch not connected</string>
    <string name="donation_processed_message">Thanks for donating!</string>
    <string name="donation_failed_message">Failed to process donation</string>
    <string name="donation_pending_message">Your donation is now pending, come back here later</string>
    <string name="donation_connection_failed_message">Failed to connect to Google Play</string>
    <string name="share_menu_title">@string/app_name</string>
    <string name="dialog_button_grant">Grant</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_enable">Enable</string>
    <string name="dialog_button_reset">Reset</string>
    <string name="message_battery_opt_warning_label_short">Battery Optimisation</string>
    <string name="message_battery_opt_warning_label">Disable Battery Optimisation</string>
    <string name="message_battery_opt_warning_desc">Battery Optimisation can cause problems with Battery Sync among other things, it\'s recommended to turn it off for Wearable Extensions</string>
    <string name="crash_handler_title">Uh oh!</string>
    <string name="crash_handler_message">Something went wrong. If this is not the first time you\'ve seen this, you may need to reinstall Wearable Extensions.</string>
    <string name="crash_handler_action_restart">Restart</string>
    <string name="crash_handler_action_report">Report</string>
    <string name="crash_handler_action_close">Close</string>
    <string name="crash_handler_show_stacktrace">Tap to show stacktrace</string>
    <string name="manage_space_clear_cache_title">Clear Cache</string>
    <string name="manage_space_reset_app_title">Reset Wearable Extensions</string>
    <string name="manage_space_clear_cache_desc">Clear Wearable Extensions cache.</string>
    <string name="manage_space_reset_app_desc">Reset Wearable Extensions. This will reset Wearable Extensions on all your registered watches, as well as here on your phone. This may take a while.</string>
    <string name="manage_space_clear_cache_button">Clear\nCache</string>
    <string name="manage_space_reset_settings_button">Reset\nSettings</string>
    <string name="manage_space_reset_app_button">Reset\nApp</string>
</resources>