<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.Preference
        android:key="show_battery_sync_prefs"
        android:icon="@drawable/pref_ic_battery_sync"
        android:title="@string/main_battery_sync_title"
        android:summary="@string/main_battery_sync_summary" />

    <androidx.preference.Preference
        android:key="show_interrupt_filter_sync_prefs"
        android:icon="@drawable/pref_ic_interrupt_filter"
        android:title="@string/main_interrupt_filter_sync_title"
        android:summary="@string/main_interrupt_filter_sync_summary" />

    <androidx.preference.Preference
        android:key="show_phone_locking_prefs"
        android:icon="@drawable/pref_ic_phone_lock"
        android:title="@string/main_phone_locking_title"
        android:summary="@string/main_phone_locking_summary" />

    <androidx.preference.Preference
        android:key="show_app_manager"
        android:icon="@drawable/pref_ic_app_manager"
        android:title="@string/main_app_manager_title"
        android:summary="@string/main_app_manager_summary" />

</androidx.preference.PreferenceScreen>
