<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.SwitchPreference
        android:defaultValue="false"
        android:key="battery_sync_enabled"
        android:title="@string/pref_battery_sync_enable_title" />

    <androidx.preference.SeekBarPreference
        android:defaultValue="15"
        android:dependency="battery_sync_enabled"
        android:key="battery_sync_interval"
        android:max="60"
        android:summary="@string/pref_battery_sync_interval_summary"
        android:title="@string/pref_battery_sync_interval_title"
        app:min="15"
        app:showSeekBarValue="true" />

    <PreferenceCategory android:title="Charge Notifications">

        <androidx.preference.CheckBoxPreference
            android:dependency="battery_sync_enabled"
            android:key="battery_phone_charge_noti"
            android:title="@string/pref_battery_sync_phone_charged_noti_title" />

        <androidx.preference.CheckBoxPreference
            android:dependency="battery_sync_enabled"
            android:key="battery_watch_charge_noti"
            android:title="@string/pref_battery_sync_watch_charged_noti_title" />

        <androidx.preference.SeekBarPreference
            android:defaultValue="90"
            android:key="battery_charge_threshold"
            android:max="100"
            android:summary="@string/pref_battery_sync_charge_threshold_summary"
            android:title="@string/pref_battery_sync_charge_threshold_title"
            app:min="60"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
