<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory>

        <androidx.preference.Preference
            android:key="privacy_policy"
            android:title="@string/pref_about_priv_policy_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory>

        <androidx.preference.Preference
            android:icon="@drawable/pref_ic_github"
            android:key="github"
            android:title="@string/pref_about_github" />

        <androidx.preference.Preference
            android:icon="@drawable/pref_ic_changelog"
            android:key="changelog"
            android:title="@string/pref_about_changelog" />

        <androidx.preference.Preference
            android:icon="@drawable/pref_ic_share"
            android:key="share"
            android:title="@string/pref_about_share_title" />

        <androidx.preference.Preference
            android:icon="@drawable/pref_ic_donate"
            android:key="show_donate_dialog"
            android:title="@string/pref_about_donate_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_about_versions">

        <androidx.preference.Preference android:key="phone_app_version" />

        <androidx.preference.Preference
            android:key="watch_app_version"
            android:title="@string/pref_about_watch_version_loading" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
