<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        android:key="show_noti_settings"
        android:title="@string/pref_noti_status_title" />

    <androidx.preference.ListPreference
        android:key="daynight_mode"
        android:title="@string/pref_daynight_title"
        android:icon="@drawable/pref_ic_daynight"
        android:entries="@array/pref_daynight_mode_entries"
        android:entryValues="@array/pref_daynight_mode_entry_values"
        android:defaultValue="-1" />

    <androidx.preference.PreferenceCategory
        android:title="Watch Connection">

        <androidx.preference.SwitchPreference
            android:key="auto_add_watches"
            android:title="Auto-add new watches"
            android:summary="Automatically add new watches to Wearable Extensions if they already have the app installed"
            android:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_widget_customisation">

        <androidx.preference.CheckBoxPreference
            android:key="show_widget_background"
            android:title="@string/pref_show_widget_background_title"
            android:defaultValue="true" />

        <androidx.preference.SeekBarPreference
            android:key="widget_background_opacity"
            android:title="@string/pref_widget_background_opacity_title"
            android:defaultValue="60"
            android:max="100"
            android:dependency="show_widget_background"
            app:min="5"
            app:showSeekBarValue="true" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
