<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.DropDownPreference
        android:entries="@array/pref_phone_locking_mode_entries"
        android:entryValues="@array/pref_phone_locking_mode_entry_values"
        android:key="phone_locking_mode"
        android:title="@string/pref_phone_locking_mode_title" />

    <androidx.preference.Preference android:key="open_device_settings" />

    <androidx.preference.SwitchPreference
        android:icon="@drawable/pref_ic_phone_lock"
        android:key="lock_phone_enabled"
        android:summary="@string/pref_lock_phone_enabled_desc"
        android:title="@string/pref_lock_phone_enabled_title" />

</androidx.preference.PreferenceScreen>
