<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_widget_customisation">

        <androidx.preference.CheckBoxPreference
            android:key="show_widget_background"
            android:title="@string/pref_show_widget_background_title"
            android:defaultValue="true" />

        <androidx.preference.SeekBarPreference
            android:key="widget_background_opacity"
            android:title="@string/pref_widget_background_opacity_title"
            android:defaultValue="60"
            android:max="100"
            android:dependency="show_widget_background"
            app:min="5"
            app:showSeekBarValue="true" />

    </androidx.preference.PreferenceCategory>
</PreferenceScreen>
